--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_spinkit: ^5.2.0
+  flutter_typeahead: ^5.1.0
   http: any
   intl: any
   loader_overlay: ^4.0.0
