--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   connectivity_plus: ^5.0.2
   cupertino_icons: ^1.0.2
   device_info_plus: ^9.1.1
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
