--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,9 +42,13 @@ dependencies:
   flutter_spinkit: ^5.2.0
   flutter_typeahead: ^5.1.0
   http: any
+  image: ^4.2.0
+  image_picker: ^1.1.2
   intl: any
   loader_overlay: ^4.0.0
   package_info_plus: ^5.0.1
+  path_provider: ^2.1.3
+  photo_view: ^0.15.0
   provider: ^6.1.1
   shared_preferences: ^2.2.2
   sqflite: ^2.3.0
